// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`do-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(do {});
(throw error);

(do {}) || fallback;
(throw error) || fallback;

(do {}).message;
(throw error).message;

((do {}), (throw error), other);

(do {}) + 1;
(throw error) + 1;

1 + do {};
1 + throw error;

() => do {};
() => throw error;

if (condition) (do {});
if (condition) (throw error);

for (;;) (do {});
for (;;) (throw error);

label: (do {});
label: (throw error);

value = do {};
value = throw error;

=====================================output=====================================
(do {});
(throw error);

(do {}) || fallback;
(throw error) || fallback;

(do {}).message;
(throw error).message;

((do {}), throw error, other);

(do {}) + 1;
(throw error) + 1;

1 + do {};
1 + throw error;

() => do {};
() => throw error;

if (condition) (do {});
if (condition) (throw error);

for (;;) (do {});
for (;;) (throw error);

label: (do {});
label: (throw error);

value = do {};
value = throw error;

================================================================================
`;

exports[`do-expression.js format[acorn] 1`] = `
"Unexpected token (1:2)
> 1 | (do {});
    |  ^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: Unexpected token (1:1)"
`;

exports[`do-expression.js format[espree] 1`] = `
"Unexpected token do (1:2)
> 1 | (do {});
    |  ^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: Unexpected token do"
`;

exports[`do-expression.js format[flow] 1`] = `
"Unexpected token \`do\` (1:2)
> 1 | (do {});
    |  ^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: Unexpected token \`do\` (1:1)"
`;

exports[`do-expression.js format[hermes] 1`] = `
"invalid expression (1:2)
> 1 | (do {});
    |  ^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: invalid expression (1:1)
(do {});
 ^"
`;

exports[`do-expression.js format[meriyah] 1`] = `
"Unexpected token: 'do' (1:2)
> 1 | (do {});
    |  ^^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: [1:1-1:3]: Unexpected token: 'do'"
`;

exports[`do-expression.js format[oxc] 1`] = `
"Unexpected token (1:2)
> 1 | (do {});
    |  ^^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;"
`;

exports[`do-expression.js format[oxc-ts] 1`] = `
"Unexpected token (1:2)
> 1 | (do {});
    |  ^^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;"
`;

exports[`do-expression.js format[typescript] 1`] = `
"Expression expected. (1:2)
> 1 | (do {});
    |  ^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;
Cause: Expression expected."
`;

exports[`do-expression.js format[yuku] 1`] = `
"'do' is reserved and cannot be used as an identifier (1:2)
> 1 | (do {});
    |  ^^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;"
`;

exports[`do-expression.js format[yuku-ts] 1`] = `
"'do' is reserved and cannot be used as an identifier (1:2)
> 1 | (do {});
    |  ^^
  2 | (throw error);
  3 |
  4 | (do {}) || fallback;"
`;
